# pjcppsipagent

./: .gitignore  CMakeLists.txt  IDEA.md  Makefile  PLAN.md  PLAN_LINUX.md  README.md
protos/: call_agent.proto
scripts/: gen_fixtures.sh  run_integration.sh  run_uas.sh
src/: args.cpp  args.h  call_executor.cpp  call_executor.h  events.cpp  events.h  grpc_server.cpp  grpc_server.h  main.cpp  silence.cpp  silence.h  sip_agent.cpp  sip_agent.h  tts_stub.cpp  tts_stub.h
testenv/sipp/: uas_answer.xml  uas_answer_silent.xml  uas_busy.xml  uas_no_answer.xml
tests/integration/: conftest.py  requirements.txt  test_answered_full_flow.py  test_busy.py  test_cancel.py  test_cli_mode.py  test_concurrent_rejected.py  test_grpc.py  test_idle_shutdown.py  test_no_answer.py  test_stream_audio_stub.py
tests/unit/: test_args.cpp  test_events.cpp  test_proto_events.cpp  test_silence.cpp  test_tts_stub.cpp
